--- a/Win32VirtualLCD/Win32VirtualLCD/Win32VirtualLCD.vcxproj
+++ b/Win32VirtualLCD/Win32VirtualLCD/Win32VirtualLCD.vcxproj
@@ -92,6 +92,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -145,24 +146,36 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BackBuffer.h" />
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Rect.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Sprite.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Vec2.h" />
     <ClInclude Include="Win32VirtualLCD.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BackBuffer.cpp" />
+    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Rect.cpp" />
+    <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Vec2.cpp" />
     <ClCompile Include="Win32VirtualLCD.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Win32VirtualLCD.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\..\Desktop\Breadboard.bmp" />
+    <Image Include="..\..\..\..\Pictures\BreadboardMask.bmp" />
     <Image Include="small.ico" />
     <Image Include="Win32VirtualLCD.ico" />
   </ItemGroup>
